src/test/deca/codegen/valid_extension/oracle/TAB_size_max.deca
{
    int[] a = new int[9998];
}