src/test/deca/codegen/invalid/oracle/decl_type.deca
{
    int a = 3.0f;
}